# veyra

./: bun.lockb  package.json
backend/: db.js  server.js
backend/api/: admin-user-action.js  admin-users.js  comments.js  feedback.js  signin.js  signup.js  user.js
backend/middleware/: http-security.js  ip-ban.js  security.js
backend/mochi/: Cargo.toml  README.md
backend/mochi/src/: cache.rs  constants.rs  cover.rs  encoding.rs  helpers.rs  main.rs  proxy.rs  rewrite.rs  state.rs  tuning.rs  websocket.rs
backend/routes/: mochi.js
backend/utils/: auth-roles.js  client-ip.js  sanitize.js
public/: manifest.json
public/pages/other/ai/assets/js/: index.js
public/pages/other/changelog/: index.html
public/pages/other/feedback/: index.html
public/static/: index.html
public/storage/data/: collection.json
src/components/: AccountPage.tsx  AppsPage.tsx  BookmarksPage.tsx  ContentArea.tsx  ExtensionsPage.tsx  FeedbackPage.tsx  GamesPage.tsx
